import { afterAll, beforeAll, describe, expect, test } from "bun:test";
import { buildEmitter, cleanupFixtures, compileFixture } from "./compile-fixture.js";

afterAll(cleanupFixtures);
beforeAll(buildEmitter, 120_000);

// ---------------------------------------------------------------------------
// Fixtures
// ---------------------------------------------------------------------------

const standaloneSpec = `
import "@typespec/http";
using TypeSpec.Http;

@service(#{ title: "StatusApi" })
namespace StatusApi;

model HealthStatus { ok: boolean; }

@route("/health")
@get op health(): HealthStatus;
`;

const nestedSpec = `
import "@typespec/http";
using TypeSpec.Http;

@service(#{ title: "NestedApi" })
namespace NestedApi;

namespace Admin {
  model Config { key: string; value: string; }

  @route("/admin/config")
  @get op getConfig(): Config;
}
`;

const hintsSpec = `
import "@typespec/http";
import "./lib.js";

using TypeSpec.Http;
using TypeSpec.Reflection;

extern dec auth(target: Operation, scope: valueof string);

@service(#{ title: "SecureApi" })
namespace SecureApi {
  @route("/admin")
  @get @auth("admin")
  op admin(): string;
}
`;

const escapingSpec = `
import "@typespec/http";
using TypeSpec.Http;

@service(#{ title: "EscapingApi" })
namespace EscapingApi;

model EscapedModel {
  "default": string;
  "x-request-id": string;
  "readonly"?: string;
  "__proto__"?: string;
}

@route("/escaped")
interface Items {
  @get delete(): EscapedModel;

  @post create(
    @query("default") defaultValue?: string,
    @body body: EscapedModel,
  ): EscapedModel;
}
`;

const moduleReservedIdentifierSpec = `
import "@typespec/http";
using TypeSpec.Http;

@service(#{ title: "AwaitIdentifiersApi" })
namespace AwaitIdentifiersApi;

model await {
  await: string;
}

@route("/await")
interface AwaitOperations {
  @post op await(
    @query await: string,
    @body body: await,
  ): await;
}
`;

// ---------------------------------------------------------------------------
// Tests
// ---------------------------------------------------------------------------

describe("operation structures", () => {
  test("standalone operations — no interface wrapper", () => {
    const r = compileFixture("standalone", standaloneSpec);

    expect(r.readFile("status-api", "server.ts")).toMatchSnapshot();
    expect(r.readFile("status-api", "server-operations.ts")).toMatchSnapshot();
    expect(r.readFile("status-api", "server-router.ts")).toMatchSnapshot();
  });

  test("nested namespaces carry namespace metadata", () => {
    const r = compileFixture("nested", nestedSpec);

    expect(r.readFile("nested-api", "server-operations.ts")).toMatchSnapshot();
  });

  test("custom decorator hints for middleware", () => {
    const r = compileFixture("hints", hintsSpec, "", {
      "lib.js": "export function $auth() {}",
    });

    expect(r.readFile("secure-api", "server-hints.ts")).toMatchSnapshot();
    expect(r.readFile("secure-api", "server-operations.ts")).toMatchSnapshot();
  });

  test("escapes TypeScript identifiers and property names", () => {
    const r = compileFixture("escaping", escapingSpec);

    expect(r.readFile("escaping-api", "models.ts")).toMatchSnapshot();
    expect(r.readFile("escaping-api", "server.ts")).toMatchSnapshot();
    expect(r.readFile("escaping-api", "server-operations.ts")).toMatchSnapshot();
    expect(r.readFile("escaping-api", "server-router.ts")).toMatchSnapshot();
  });

  test("escapes await across generated declarations and operation surfaces", () => {
    const r = compileFixture("await-identifiers", moduleReservedIdentifierSpec);

    r.typecheck("await-identifiers-api");
    expect(r.readFile("await-identifiers-api", "models.ts")).toContain("export interface await_");
    expect(r.readFile("await-identifiers-api", "models.ts")).toContain("await: string;");
    expect(r.readFile("await-identifiers-api", "server-operations.ts")).toContain(
      'RequestDecoders.query("await"',
    );
  });
});
